@@ -25,6 +25,9 @@
 	<plug-in>
 		org.openjump.core.ui.plugin.datastore.postgis.SaveToPostGISPlugIn
 	</plug-in>
+	<extension>
+		com.vividsolutions.jump.datastore.OracleDataStoreExtension
+	</extension>
 	<plug-in>
 		org.openjump.core.ccordsys.srid.EnsureAllLayersHaveSRIDStylePlugIn
 	</plug-in>
